--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - 2.7
 before_install:
     - sudo apt-get update
-    - sudo apt-get install -y build-essential procps lsb-release
+    - sudo apt-get install -y build-essential procps
     - sudo mkdir -p ~/.cache
 script:
   - sudo make install
