--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
     - sudo apt-get install -y procps
     - sudo mkdir -p ~/.cache
 script:
-  - sudo make install
+  - sudo ./sh/install.sh
